2009-08-13  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/cms/cms.py:
	Pytis CMS: Fix access log column names..

2009-08-13  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/cms/cms.py:
	Pytis CMS: Typo fix..

2009-08-13  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/cms/cms.py:
	Pytis CMS: AccessLog inheritance fixed..

2009-08-13  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/cms/cms.py:
	Pytis CMS: Fixed access log table name..

2009-08-12  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/cms/web.py:
	Log only displayed pages, not images or other content displayed on them..

2009-08-12  Tomas Cerha  <cerha@brailcom.org>

	* db/db_pytis_cms.py:
	* lib/pytis/cms/__init__.py:
	* lib/pytis/cms/cms.py:
	* lib/pytis/cms/web.py:
	Pytis CMS: Added support for access logging.

2009-08-11  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/presentation/spec.py:
	* lib/pytis/web/form.py:
	Allow functions in form layout to support record specific dynamic layouts..

2009-08-07  Tomas Cerha  <cerha@brailcom.org>

	* translations/pytis.cs.po:
	* translations/pytis.de.po:
	* translations/pytis.es.po:
	* translations/pytis.fr.po:
	* translations/pytis.hu.po:
	* translations/pytis.pl.po:
	* translations/pytis.sk.po:
	Translation files updated..

2009-08-04  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/form/list.py:
	Fix drawing aggregation result labels..

2009-08-04  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/presentation/_test.py:
	Updated `display' test to reflect the previous change in display specification..

2009-08-03  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/cms/web.py:
	Added support for site icons..

2009-08-03  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/data/postgresql.py:
	Fixed "Unknown column ..." error message..

2009-08-04  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/postgresql.py:
	Don't use query lock on connection initialization queries.

2009-08-04  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/dbapi.py: